--- a/website/guide/es6features.html
+++ b/website/guide/es6features.html
@@ -1,5 +1,7 @@
 <h1 id="es6features">Ecmascript E6 features</h1>
 
+<p>FIXME: computed literals</p>
+
 <p>This section describes the small set of features Duktape borrows from
 <a href="http://www.ecma-international.org/ecma-262/6.0/index.html">Ecmascript E6</a>.
 These features are not fully compliant; the intent is to minimize custom features
